istio/jaeger-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jaeger-observability-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - jaeger.istio-system.23.101.74.16.nip.io
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - jaeger.istio-system.23.101.74.16.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-gw-virtualservice
  namespace: istio-system
spec:
  hosts:
  - jaeger.istio-system.23.101.74.16.nip.io
  gateways:
  - jaeger-observability-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jaeger-query
